# sentinel

./: .env.example  .gitignore  Dockerfile  Dockerfile.prod  LICENSE  README.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml  railway.toml
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
dashboard/: index.html  landing.html
docs/: ARCHITECTURE.md  DEPLOY.md  RUNBOOK.md
evals/: run_injection_eval.py
evals/datasets/: injection_v1.jsonl
scripts/: deploy.sh  deploy_railway.sh  prometheus.yml
src/sentinel/api/: admin_schemas.py  dependencies.py  main.py  middleware.py  routes_admin.py  routes_messages.py  routes_ops.py  schemas.py
src/sentinel/audit/: writer.py
src/sentinel/core/: config.py  errors.py  logging.py
src/sentinel/db/: audit_queries.py  models.py  repositories.py  session.py
src/sentinel/observability/: metrics.py
src/sentinel/policies/: engine.py  rate_limit.py
src/sentinel/providers/: anthropic_provider.py  base.py  circuit_breaker.py  grok_provider.py  mock_provider.py  openai_provider.py  pricing.py  router.py
src/sentinel/security/: api_keys.py  injection.py  pii.py
src/sentinel_sdk/: __init__.py  client.py
tests/: conftest.py
tests/integration/: conftest.py  test_admin_api.py  test_messages.py
tests/unit/: test_api_keys.py  test_circuit_breaker.py  test_injection.py  test_pii.py  test_policy_engine.py  test_pricing.py
